# moderncpp-project-template

./: CMakeLists.txt  conanfile.txt
project/: CMakeLists.txt
project/helloapp/: CMakeLists.txt
project/helloapp/src/: integration_test.cpp
project/hellolib/: CMakeLists.txt
project/hellolib/include/: linear_model.h
project/hellolib/src/: linear_model.cpp
project/integration/: CMakeLists.txt
project/integration/src/: integration_test.cpp
project/mllib/: CMakeLists.txt
project/mllib/include/: common.h  linear_model.h
project/mllib/src/: linear_model.cpp
project/mllib/test/: linear_model_test.cpp
